KVH/mykvh/Email-to-anything/objects/Email_Services_Function__c.object
<CustomObject>
    <description>Email services</description>
    <fields>
        <fullName>Action_if_No_Match_Found__c</fullName>
        <label>Action if No Match Found</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert New Record</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Put email in an Unmatched Email Queue</fullName>
                </value>
                <value>
                    <fullName>Drop email</fullName>
                </value>
                <value>
                    <fullName>Go to another e2a Email Service Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_if_No_Match_Go_To_Service__c</fullName>
        <label>Action if No Match Go To Service</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Manual_Insert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Manual Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Manual_Match__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Manual Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Record_Matching_Field__c</fullName>
        <label>Alternate Record Matching Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Record_Matching_Group__c</fullName>
        <description>Specify regular expression to extract a value from selected parts of email, Using Alternate Record Matching Group.</description>
        <label>Alternate Record Matching Group</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Record_Matching_Regex__c</fullName>
        <label>Alternate Record Matching Regex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Record_Matching_Search_In__c</fullName>
        <label>Alternate Record Matching Search In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Subject &amp; Body</fullName>
                </value>
                <value>
                    <fullName>Subject &amp; Body &amp; Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Owner_Type__c</fullName>
        <description>Assigned owner user type</description>
        <label>Assigned Owner Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related object assigned owner</description>
        <label>Assigned Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Email_Services_Functions_Assigned_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Queue__c</fullName>
        <description>Assigned queue</description>
        <label>Assigned Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachments_On_Obj_Is_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments On Obj Is Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachments_On_Storage_Obj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments On Storage Obj</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachments_On_Target_Obj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachments On Target Obj</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatically_Copy_Tags__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Automatically Copy Tags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_Assign_Field__c</fullName>
        <description>Email body assign field</description>
        <label>Email Body Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Argument_1_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Body Contains Argument 1 Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Argument_1__c</fullName>
        <description>Body contains argument</description>
        <label>Body Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Argument_2_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Body Contains Argument 2 Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Argument_2__c</fullName>
        <description>Body contains argument</description>
        <label>Body Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Argument_3_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Body Contains Argument 3 Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Argument_3__c</fullName>
        <description>Body contains argument</description>
        <label>Body Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_1__c</fullName>
        <description>Email body contains field</description>
        <label>Body Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_2__c</fullName>
        <description>Email body contains field</description>
        <label>Body Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_3__c</fullName>
        <description>Email body contains field</description>
        <label>Body Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_Value_1__c</fullName>
        <description>Email body contains assigned value</description>
        <label>Body Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_Value_2__c</fullName>
        <description>Email body contains assigned value</description>
        <label>Body Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_Value_3__c</fullName>
        <description>Email body contains assigned value</description>
        <label>Body Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Match_Type__c</fullName>
        <description>Contact match type</description>
        <label>Contact Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Earliest Created</fullName>
                </value>
                <value>
                    <fullName>Latest Created</fullName>
                </value>
                <value>
                    <fullName>Latest Modified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Body_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Body Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Date_Add_Days__c</fullName>
        <description>Email received date adjustment days</description>
        <label>Email Date Add Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Date_Assign_Field__c</fullName>
        <description>Email received date assign field</description>
        <label>Email Date Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Date_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Date Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_From_Address_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email From-Address Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_From_Domain_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email From Domain Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_From_First_Name_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email From First Name Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_From_Last_Name_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email From Last Name Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_From_Name_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email From Name Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Headers_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Headers Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Html_Body_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Html Body Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Message_Object_Key_Prefix__c</fullName>
        <description>Related email message object key prefix</description>
        <label>Related Email Msg Obj Key Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Subject Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_To_Address_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email To-Address Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Address_Assign_Field__c</fullName>
        <description>Email from-address assign field</description>
        <label>Email From-Address Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Domain_Assign_Field__c</fullName>
        <description>Email from-address domain assign field</description>
        <label>Email From Domain Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_First_Name_Assign_Field__c</fullName>
        <description>Email from first name assign field</description>
        <label>Email From First Name Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Last_Name_Assign_Field__c</fullName>
        <description>Email from last name assign field</description>
        <label>Email From Last Name Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name_Assign_Field__c</fullName>
        <description>Email from name assign field</description>
        <label>Email From Name Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Id__c</fullName>
        <description>Email services function id</description>
        <label>Function Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headers_Assign_Field__c</fullName>
        <label>Email Headers Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Html_Body_Assign_field__c</fullName>
        <label>Email Html Body Assign field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record is active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Assign_Field__c</fullName>
        <description>Matched account assign field</description>
        <label>Matched Account Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matched Account Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matched_Contact_Assign_Field__c</fullName>
        <description>Matched contact assign field</description>
        <label>Matched Contact Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Contact_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matched Contact Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewAlternate_Record_Matching_Search_In__c</fullName>
        <label>Alternate Record Matching Search In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Headers</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Key_Prefix__c</fullName>
        <description>Related object key prefix</description>
        <label>Related Object Key Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_1_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Status Field 1 Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_1__c</fullName>
        <description>Related object status picklist field</description>
        <label>Related Object Status Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_2_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Status Field 2 Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_2__c</fullName>
        <description>Related object status picklist field</description>
        <label>Related Object Status Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_3_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object Status Field 3 Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_3__c</fullName>
        <description>Related object status picklist field</description>
        <label>Related Object Status Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_Value_1__c</fullName>
        <description>Related object status picklist field assigned value</description>
        <label>Related Object Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_Value_2__c</fullName>
        <description>Related object status picklist field assigned value</description>
        <label>Related Object Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_Value_3__c</fullName>
        <description>Related object status picklist field assigned value</description>
        <label>Related Object Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_Value__c</fullName>
        <description>Related object status picklist field assigned value</description>
        <label>Related Object Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field__c</fullName>
        <description>Related object status picklist field</description>
        <label>Related Object Status Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <description>Queue id for unmatched or errored messages</description>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Insert__c</fullName>
        <description>Target object record insert status</description>
        <label>Record Insert</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert Not Allowed</fullName>
                </value>
                <value>
                    <fullName>Insert Allowed</fullName>
                </value>
                <value>
                    <fullName>Only Manual Insert Allowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Id_Overwrite__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Record Type Id Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id__c</fullName>
        <description>Related object record type Id (on insert)</description>
        <label>Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_ID_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service ID Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Id_Assign_Field__c</fullName>
        <description>Email service id assign field</description>
        <label>Service ID Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Id_Code__c</fullName>
        <description>Email service id code</description>
        <label>Service ID Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Attachments_In__c</fullName>
        <inlineHelpText>Allow email&apos;s attachments to be stored in Attachment Object or Files.</inlineHelpText>
        <label>Store Attachments In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment Object</fullName>
                </value>
                <value>
                    <fullName>Files</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store_a_copy_of_email_as_an_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store a copy of email as an Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject_Assign_Field__c</fullName>
        <description>Email subject assign field</description>
        <label>Email Subject Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Argument_1_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subject Contains Argument 1 Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Argument_1__c</fullName>
        <description>Subject contains argument</description>
        <label>Subject Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Argument_2_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subject Contains Argument 2 Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Argument_2__c</fullName>
        <description>Subject contains argument</description>
        <label>Subject Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Argument_3_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subject Contains Argument 3 Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Argument_3__c</fullName>
        <description>Subject contains argument</description>
        <label>Subject Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_1__c</fullName>
        <description>Email subject contains field</description>
        <label>Subject Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_2__c</fullName>
        <description>Email subject contains field</description>
        <label>Subject Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_3__c</fullName>
        <description>Email subject contains field</description>
        <label>Subject Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_Value_1__c</fullName>
        <description>Email subject contains assigned value</description>
        <label>Subject Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_Value_2__c</fullName>
        <description>Email subject contains assigned value</description>
        <label>Subject Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_Value_3__c</fullName>
        <description>Email subject contains assigned value</description>
        <label>Subject Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_Id_In_Body__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thread Id In Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thread_Id_In_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thread Id In Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Address_Assign_Field__c</fullName>
        <description>Email to-address assign field</description>
        <label>Email To-Address Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>e2a Email Rule</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Email Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>